[package]
name = "block_tube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.25"
regex = "1.7.3"

[dependencies.isg_4real]
path = "/Users/bryan/Projects/bitcoin-software/Infinite-Storage-Glitch"

